# foreign-function-examples

./: .gitignore  CMakeLists.txt  PLAN.md  README.md
basic-examples/: CMakeLists.txt  README.md  basic_examples.c  basic_examples.dylib  basic_examples.wl  basic_examples.wlt  libmy_ffi_lib.dylib  my_ffi_lib.dylib  test_ffi.wl
collatz-example/: .gitignore  CMakeLists.txt  README.md  collatz.c  collatz.dylib  collatz.wl  collatz.wlt  libcollatz.dylib  test_collatz.wl
matrix-examples/: CMakeLists.txt  MatrixOps.wl  README.md  matrix.wl  matrix.wlt
matrix_helpers/: CMakeLists.txt  MatrixOps.wl  README.md  build.sh  libmatrix_lib.dylib  matrix_lib.c  matrix_lib.dylib
my_ffi/: CMakeLists.txt  README.md  my_ffi_lib.dylib  test_ffi.wl
